tests/baselines/reference/extendsUntypedModule.errors.txt
/a.ts(2,1): error TS6192: No import of 'bar' is used.


==== /a.ts (1 errors) ====
    import Foo from "foo";
    import Bar from "bar"; // error: unused
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: No import of 'bar' is used.
    export class A extends Foo { }
    
==== /node_modules/foo/index.js (0 errors) ====
    // Test that extending an untyped module is an error, unlike extending unknownSymbol.
    
    This file is not read.
    
==== /node_modules/bar/index.js (0 errors) ====
    Nor is this one.
    